<resources>
    <string name="app_name">GitHubConnections</string>

    <string name="login_username">Username</string>
    <string name="login_login">Login</string>
    <string name="user_details_name">Name:</string>
    <string name="user_details_bio">Bio:</string>
    <string name="user_details_location">Location:</string>
    <string name="user_details_followers_count">Followers: %s</string>
    <string name="user_details_following_count">Following: %s</string>
    <string name="user_details_repos_count">Public repos count:</string>
    <string name="user_details_avatar">Avatar</string>
    <string name="repo_item_forks">Forks</string>
    <string name="repo_item_watchers">Watchers</string>
    <string name="menu_logout">Logout</string>
    <string name="fragment_label_login">Login</string>
    <string name="fragment_label_user_details">User Details</string>
    <string name="fragment_label_users_list_following">Following</string>
    <string name="fragment_label_users_list_followers">Followers</string>
    <string name="error_not_found">This user does not exists</string>
    <string name="error_unexpected_error">Unexpected error</string>
    <string name="error_not_available">N/A</string>
    <string name="args_empty_string" />
    <string name="error_username_empty">Username is empty</string>
    <string name="error_empty_results">Empty Result</string>
</resources>
